<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="stone.philosophers.com.driversed.UploadDrive"
        >

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

    <android.support.v7.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_marginBottom="16dp"/>


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="bottom"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tripInformation"
                    android:text="@string/trip_information_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    />

                <TextView
                    android:id="@+id/milesLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/miles_driven_label"
                    android:layout_below="@+id/tripInformation"
                    android:layout_marginTop="24dp"
                    />

                <EditText
                    android:id="@+id/milesTextView"
                    android:hint="@string/miles_driven_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/milesLabel"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    />

                <TextView
                    android:id="@+id/teacherLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/teacher_label"
                    android:layout_marginTop="24dp"
                    android:layout_below="@+id/milesLabel"
                    />

                <EditText
                    android:id="@+id/teacherTextView"
                    android:hint="@string/teacher_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_toRightOf="@+id/teacherLabel"
                    android:layout_marginTop="16dp"
                    android:layout_below="@+id/milesTextView"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/selectImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_picture"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:layout_below="@+id/teacherTextView"/>

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
